# WB-Project

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
archive/_pre_clean/: 01_india_mih_pipeline.ipynb  02_kenya_rhon_pipeline.ipynb  RHONairobi_human_coding_dataset.csv
archive/india/: MIH_S2_final_200_mix.xlsx  MIH_S2_final_dataset__no_dup.xlsx  MIH_S2_final_dataset__pre_dedup.xlsx  MIH_S2_final_dataset__with_sexism_pre_merge.xlsx  MIH_S2_yt_for_llm_coding__193rows.xlsx  MIH_S2_yt_for_llm_coding__lang.xlsx  MIH_S2_yt_human_coding_results__193rows.xlsx  MIH_S2_yt_human_coding_results__final_copy.xlsx  MIH_S2_yt_human_coding_results__lang.xlsx  test_MIH_S2_FinalDataset_no_duplicates.xlsx  test_MIH_S2_gender_classified.xlsx  test_MIH_S2_gender_filtered_rerank.xlsx
archive/kenya/: RHON_yt_x_for_llm_coding.xlsx  RHON_yt_x_for_llm_coding__lang.xlsx  RHONairobi_for_llm_coding_v0.xlsx
archive/misc/: llm_cod_sample_102rows.xlsx  wb_social_media_coding_45rows.xlsx
archive/nigeria/: BBNaija_for_llm_coding_v0.xlsx
codebook/: codebook_spec.md  keywords.docx
data/: GOLD_MANIFEST.md  PIPELINE_STAGES.md
data/human_coded/india/: MIH_S2_human_coding_dataset.xlsx  MIH_S2_human_coding_extended.xlsx
data/human_coded/nigeria/: BBNaija_human_coding_dataset.xlsx
notebooks/: 01_india_mih_pipeline.ipynb  02_kenya_rhon_pipeline.ipynb  03_nigeria_bbnaija_pipeline.ipynb
notebooks/test/: test_mih_s2.ipynb
scripts/: patch_notebooks.py  validate_data.py
src/: app.py
src/wbproj/: __init__.py  clean.py  config.py  loaders.py  paths.py
(+32 files in other folders)
